@@ -1,3 +1,14 @@
+Camlp5 Version 6.09:
+--------------------
+
+* [13 Mar 13] Added option '-dquot' to specify the default quotation name.
+  and the ability to use "#option" directive with two parameters. Therefore,
+  we can use either (e.g.):
+      -dquot "expr"
+  in the command line of camlp5 or
+      #option "-dquot" "expr"
+  inside a file.
+
 Camlp5 Version 6.08:
 --------------------
 
